Updated with version: 4.27.0 changes

--- a/adblock-betafish/options/support.html
+++ b/adblock-betafish/options/support.html
@@ -3,9 +3,8 @@
 <div class="option-page-box">
   <div class="option-page-content">
     <h1 i18n="adblocksupport" class="page-title"></h1>
-
-    <h2 i18n="foundbug" class="paragraph-title"></h2>
-    <div class="section-padding bottom-line">
+    <h2 i18n="needhelp" class="paragraph-title bottom-line"></h2>
+    <div class="section-padding support-text">
       <a
         i18n="bugreport"
         i18n_replacement_el="bugreport"
@@ -14,65 +13,57 @@
       >
         <span id="bugreport" class="link-text-color"></span>
       </a>
-      <span class="english-only do-not-display">(<span i18n="englishonly"></span>)</span>
+      <span class="english-only do-not-display support-text"
+        >(<span i18n="englishonly"></span>)</span
+      >
     </div>
-    <a
-      i18n="ad_report_please"
-      i18n_replacement_el="ad_report_please"
-      class="section-padding bottom-line"
-      href="https://help.getadblock.com/support/solutions/articles/6000109812-report-an-unblocked-ad"
-      target="_blank"
-    >
-      <span id="ad_report_please" class="link-text-color"></span>
-    </a>
-    <a i18n="debuginfo" i18n_replacement_el="debuginfo" class="section-padding" id="debug" href="#">
-      <span id="debuginfo" class="link-text-color"></span>
-    </a>
-    <textarea id="debugInfo" class="widest" style="display:none;"></textarea>
-
-    <h2 i18n="questionoridea" class="paragraph-title"></h2>
-    <div class="section-padding">
+    <div class="section-padding support-text">
       <a
-        i18n="supportsite"
-        i18n_replacement_el="supportsite"
-        href="https://help.getadblock.com/"
+        i18n="helpcenter"
+        i18n_replacement_el="helpcenter_link"
+        href="https://help.getadblock.com/support/home"
         target="_blank"
       >
-        <span id="supportsite" class="link-text-color"></span>
+        <span id="helpcenter_link" class="link-text-color"></span>
       </a>
-      <span class="english-only do-not-display">(<span i18n="englishonly"></span>)</span>
     </div>
-
-    <h2 i18n="whatmakesadblocktick" class="paragraph-title"></h2>
-    <a
-      i18n="sourcecode"
-      i18n_replacement_el="sourcecode"
-      class="section-padding bottom-line"
-      href="http://code.getadblock.com/"
-      target="_blank"
-    >
-      <span id="sourcecode" class="link-text-color"></span>
-    </a>
-    <a
-      i18n="contributors"
-      i18n_replacement_el="contributors"
-      class="section-padding"
-      href="https://getadblock.com/contributors/"
-      target="_blank"
-    >
-      <span id="contributors" class="link-text-color"></span>
-    </a>
-
-    <h2 i18n="adblockupdates" class="paragraph-title"></h2>
-    <a
-      class="section-padding"
-      id="whatsnew_link"
-      i18n="whatsnew"
-      i18n_replacement_el="whatsnew"
-      href="#"
-    >
-      <span id="whatsnew" class="link-text-color"></span>
-    </a>
+    <div class="section-padding add-space-between support-text">
+      <span i18n="debuginfo"> </span>
+      <span class="btn medium red" id="btnCopyDebugData">
+        <span id="checkmark-circle" class="do-not-display">
+          <span id="checkmark-circle-checkmark"></span>
+        </span>
+        <span id="copyDebugData" i18n="copydebugdata"></span>
+        <span id="copiedDebugData" class="do-not-display" i18n="copieddebugdata"></span>
+      </span>
+    </div>
+    <textarea id="debugInfo" class="widest do-not-display"></textarea>
+    <h2 i18n="aboutadblock" class="paragraph-title bottom-line"></h2>
+    <div class="section-padding support-text">
+      <a
+        i18n="contributors"
+        i18n_replacement_el="contributors"
+        href="https://getadblock.com/contributors/"
+        target="_blank"
+      >
+        <span id="contributors" class="link-text-color support-text"></span>
+      </a>
+    </div>
+    <div class="section-padding support-text">
+      <a
+        i18n="sourcecode"
+        i18n_replacement_el="sourcecode"
+        href="https://github.com/betafish-inc/adblock-releases"
+        target="_blank"
+      >
+        <span id="sourcecode" class="link-text-color"></span>
+      </a>
+    </div>
+    <div class="section-padding support-text">
+      <a id="whatsnew_link" i18n="whatsnew" i18n_replacement_el="whatsnew" href="#">
+        <span id="whatsnew" class="link-text-color"></span>
+      </a>
+    </div>
     <textarea id="changes" class="widest" style="display:none;"></textarea>
 
     <div class="translation_credits italic do-not-display"></div>
