Updated with version: 4.29.0 changes

--- a/adblock-betafish/options/customize.html
+++ b/adblock-betafish/options/customize.html
@@ -71,7 +71,7 @@
                   type="button"
                   i18n="buttonblockit"
                   disabled="disabled"
-                />
+                ></button>
               </td>
             </tr>
           </table>
@@ -116,7 +116,7 @@
                   type="button"
                   i18n="buttonblockit"
                   disabled="disabled"
-                />
+                ></button>
               </td>
             </tr>
           </table>
@@ -155,7 +155,7 @@
                   type="button"
                   i18n="buttonok"
                   disabled="disabled"
-                />
+                ></button>
               </td>
             </tr>
           </table>
@@ -209,7 +209,7 @@
                   type="button"
                   i18n="buttonok"
                   disabled="disabled"
-                />
+                ></button>
               </td>
             </tr>
           </table>
@@ -220,7 +220,12 @@
     <div class="space-between-line">
       <h2 i18n="manualfilteredit2" class="paragraph-title"></h2>
       <span>
-        <button class="btn short red" type="button" id="btnEditAdvancedFilters" i18n="buttonedit" />
+        <button
+          class="btn short red"
+          type="button"
+          id="btnEditAdvancedFilters"
+          i18n="buttonedit"
+        ></button>
         <span id="spanSaveButton" style="display:none;">
           <span class="savereminder bold standout-message" i18n="savereminder"></span>
           <button
@@ -228,7 +233,7 @@
             id="btnSaveAdvancedFilters"
             i18n="savebutton"
             class="btn short red inline"
-          />
+          ></button>
         </span>
       </span>
     </div>
@@ -273,7 +278,7 @@
             type="button"
             id="btnEditExcludeAdvancedFilters"
             i18n="buttonedit"
-          />
+          ></button>
           <span id="spanSaveExcludeButton" style="display:none;">
             <span class="savereminder bold standout-message" i18n="savereminder"></span>
             <button
@@ -281,7 +286,7 @@
               id="btnSaveExcludeAdvancedFilters"
               i18n="savebutton"
               class="btn short red inline"
-            />
+            ></button>
           </span>
         </span>
       </div>
