--- a/adblock-betafish/options/support.html
+++ b/adblock-betafish/options/support.html
@@ -29,7 +29,7 @@
     </div>
     <div class="section-padding add-space-between support-text">
       <span i18n="debuginfo"> </span>
-      <span class="btn medium red" id="btnCopyDebugData">
+      <span class="btn red" id="btnCopyDebugData">
         <span id="checkmark-circle" class="do-not-display">
           <span id="checkmark-circle-checkmark"></span>
         </span>
@@ -67,5 +67,18 @@
     <textarea id="changes" class="widest" style="display:none;"></textarea>
 
     <div class="translation_credits italic do-not-display"></div>
+    <footer>
+      <section>
+        <h2 i18n="feedback_title" class="paragraph-title bottom-line"></h2>
+        <div class="section-padding add-space-between support-text">
+          <span i18n="feedback_info" class="support-text" id="feedback-info"></span>
+          <button
+            id="support-feedback-button"
+            class="feedback-button btn"
+            i18n="myadblock_feedback_button"
+          ></button>
+        </div>
+      </section>
+    </footer>
   </div>
 </div>
