Updated with version: 4.30.0 changes

--- a/adblock-betafish/button/popup.html
+++ b/adblock-betafish/button/popup.html
@@ -92,6 +92,22 @@
           </a>
         </div>
 
+        <div id="div_sync_removed_error_msg">
+          <i
+            tabindex="0"
+            class="material-icons md-18"
+            id="sync_removed_error_icon"
+            role="img"
+            i18n-aria-label="error"
+            >error</i
+          >
+          <span id="sync_removed_error_msg_part_1" i18n="sync_removed_error_msg_part_1"></span>
+          <span id="sync_removed_error_msg_part_2" i18n="sync_removed_error_msg_part_2"></span>
+          <button tabindex="0" id="sync_removed_error_close">
+            <i class="material-icons md-18" role="img" i18n-aria-label="close">close</i>
+          </button>
+        </div>
+
         <!-- Premium CTA -->
         <div id="div_myadblock_enrollment_v2" class="premium-cta">
           <div class="cta-description">
