--- a/adblock-betafish/options/index.html
+++ b/adblock-betafish/options/index.html
@@ -160,14 +160,14 @@
 
     <div id="tab-content">
       <div id="stats-tabs" class="tab"></div>
-      <div id="mab" class="tab" syncMessageDiv="true"></div>
-      <div id="general" class="tab" syncMessageDiv="true"></div>
-      <div id="filters" class="tab" syncMessageDiv="true"></div>
-      <div id="customize" class="tab" syncMessageDiv="true"></div>
+      <div id="mab" class="tab" syncMessageDiv="true" unsyncMessageDiv="true"></div>
+      <div id="general" class="tab" syncMessageDiv="true" unsyncMessageDiv="true"></div>
+      <div id="filters" class="tab" syncMessageDiv="true" unsyncMessageDiv="true"></div>
+      <div id="customize" class="tab" syncMessageDiv="true" unsyncMessageDiv="true"></div>
       <div id="support" class="tab"></div>
-      <div id="mab-image-swap" class="tab" syncMessageDiv="true"></div>
-      <div id="sync" class="tab" syncMessageDiv="true"></div>
-      <div id="mab-themes" class="tab" syncMessageDiv="true"></div>
+      <div id="mab-image-swap" class="tab" syncMessageDiv="true" unsyncMessageDiv="true"></div>
+      <div id="sync" class="tab" syncMessageDiv="true" unsyncMessage2Div="true"></div>
+      <div id="mab-themes" class="tab" syncMessageDiv="true" unsyncMessageDiv="true"></div>
     </div>
   </body>
 </html>
